fix layout issues with content lists in tablet sizes

--- a/src/css/imports/layout.css
+++ b/src/css/imports/layout.css
@@ -336,7 +336,7 @@ label[for="id__menu-state"] {
 
 .content__list {
   margin: 3.2rem 0;
-  width: initial;
+  width: calc(var(--large-width) - 4.8rem);
   @media (--medium) {
     margin: 9.6rem 0 0 0;
     width: calc(var(--large-width)/3 - 4.8rem);
